--- a/load-data.ipynb
+++ b/load-data.ipynb
@@ -13,24 +13,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 74,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Once deleted, variables cannot be recovered. Proceed (y/[n])? y\n"
+     ]
+    }
+   ],
    "source": [
+    "%reset\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import pickle\n",
-    "from sklearn.cross_validation import train_test_split\n",
+    "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "import matplotlib.pyplot as plt\n",
-    "from sklearn.preprocessing import OneHotEncoder"
+    "from sklearn.preprocessing import OneHotEncoder, PolynomialFeatures"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 75,
    "metadata": {
     "collapsed": false
    },
@@ -77,15 +86,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 76,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data = co\n",
-    "y = pd.concat([data.pop('co'),data.pop('ethylene')],axis=1)\n",
-    "x = data"
+    "y = pd.concat([co.pop('co'),co.pop('ethylene')],axis=1)\n",
+    "x = co\n",
+    "del co"
    ]
   },
   {
@@ -98,8 +107,8 @@
    "source": [
     "# Standard scale the data\n",
     "# Deprecated\n",
-    "#y = StandardScaler().fit_transform(y)\n",
-    "#x = StandardScaler().fit_transform(x)"
+    "# y = StandardScaler().fit_transform(y)\n",
+    "# x = StandardScaler().fit_transform(x)"
    ]
   },
   {
@@ -112,71 +121,108 @@
    "source": [
     "# MinMax Scale the data\n",
     "# Deprecated\n",
-    "x = ((x-x.min())/(x.max()-x.min()))\n",
-    "#y = ((y-y.min())/(y.max()-y.min())).as_matrix()"
+    "# x = ((x-x.min())/(x.max()-x.min()))\n",
+    "# y = ((y-y.min())/(y.max()-y.min())).as_matrix()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "# Convert pandas dataframes to numpy arrays\n",
-    "x = x.as_matrix()\n",
-    "y = y.as_matrix()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 77,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Generate list of unique pairs of gas concentrations, ie categories\n",
-    "tuples = list(map(tuple, y))\n",
+    "tuples = list(map(tuple, y.as_matrix()))\n",
     "seen = set()\n",
     "cats = [cat for cat in tuples if cat not in seen and not seen.add(cat)]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# Encode the data with numerical category values in place of gas concentration tuples\n",
-    "y_enc = np.array([cats.index(item) for item in tuples]).reshape(-1,1)"
+    "y_enc = pd.DataFrame(np.array([cats.index(item) for item in tuples]).reshape(-1,1),columns=['y'])\n",
+    "del tuples, seen, cats"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 79,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "y_limited = y_enc.loc[y_enc['y'].isin([3,4])]\n",
+    "x_limited = x.loc[x.index.isin(y_limited.index)]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "# One hot encode the data\n",
-    "y_one_hot = OneHotEncoder(sparse=False).fit_transform(X=y_enc).astype('int8')"
+    "y_limited = OneHotEncoder(sparse=False).fit_transform(X=y_limited).astype('int8')\n",
+    "#del y_enc"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
+    "x = PolynomialFeatures(2).fit_transform(x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 101,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'numpy.ndarray' object has no attribute 'as_matrix'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-101-991248f6022f>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;31m# Convert pandas dataframes to numpy arrays\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m \u001b[0mx_limited\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mx_limited\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mas_matrix\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m \u001b[1;31m#y_limited = y_limited.as_matrix()\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'numpy.ndarray' object has no attribute 'as_matrix'"
+     ]
+    }
+   ],
+   "source": [
+    "# Convert pandas dataframes to numpy arrays\n",
+    "x_limited = x_limited.as_matrix()\n",
+    "#y_limited = y_limited.as_matrix()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 102,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "# Train test split the data\n",
-    "x_all, xtest, y_all, ytest = train_test_split(x, y_one_hot, test_size=1000, random_state=0)\n",
+    "x_all, xtest, y_all, ytest = train_test_split(x_limited, y_limited, test_size=1000, random_state=0)\n",
     "xtrain, xval, ytrain, yval = train_test_split(x_all, y_all, test_size=1000, random_state=0)"
    ]
   },
@@ -193,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 103,
    "metadata": {
     "collapsed": false
    },
@@ -207,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 104,
    "metadata": {
     "collapsed": false
    },
@@ -220,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 105,
    "metadata": {
     "collapsed": true
    },
@@ -233,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 106,
    "metadata": {
     "collapsed": true
    },
@@ -246,7 +292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 107,
    "metadata": {
     "collapsed": true
    },
@@ -259,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 108,
    "metadata": {
     "collapsed": true
    },
@@ -269,6 +315,32 @@
     "    pickle.dump(yval, f, pickle.HIGHEST_PROTOCOL)\n",
     "    del yval"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[1, 0],\n",
+       "       [1, 0],\n",
+       "       [1, 0],\n",
+       "       ..., \n",
+       "       [0, 1],\n",
+       "       [0, 1],\n",
+       "       [0, 1]], dtype=int8)"
+      ]
+     },
+     "execution_count": 91,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
